[package]
name = "unearth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "unearth"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
mime_guess = "2.0.4"
once_cell = "1.17.1"
pep508_rs = "0.2.1"
percent-encoding = "2.2.0"
pyo3 = { version = "0.18.3", optional = true }
pyo3-log = "0.8.1"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
scraper = "0.16.0"
serde = { version = "1.0.163", features = ["derive"] }
url = "2.3.1"
