[package]
name = "unearth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "unearth"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
md5 = "0.7.0"
mime_guess = "2.0.4"
pep440_rs = "0.3.9"
pep508_rs = "0.2.1"
percent-encoding = "2.2.0"
pyo3 = { version = "0.18.3", optional = true }
pyo3-log = "0.8.1"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
scraper = "0.16.0"
serde = { version = "1.0.163", features = ["derive"] }
sha1 = "0.10.5"
sha2 = "0.10.6"
url = "2.3.1"

[dependencies.pep-427]
git = "https://github.com/frostming/pep-427-rs"
branch = "feat/parse-tag"
